# open-service-broker-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  catalog.example.json  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: CLAUDE.md
src/: auth.rs  broker.rs  catalog_loader.rs  config.rs  error.rs  lib.rs  main.rs  operations.rs  validation.rs
src/handlers/: catalog.rs  mod.rs  service_binding.rs  service_instance.rs
src/models/: catalog.rs  common.rs  mod.rs  service_binding.rs  service_instance.rs
src/storage/: memory.rs  mod.rs  postgres.rs
tests/: api.rs  async_ops.rs  validation.rs
tests/conformance/: run.sh
