[package]
name = "rust-open-service-broker"
version = "0.1.0"
edition = "2021"
description = "Open Service Broker API implementation in Rust"
license = "MIT"

[features]
default = []
# Enable the Postgres-backed Storage implementation.
postgres = ["dep:sqlx"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
async-trait = "0.1"
dashmap = "6"
jsonschema = { version = "0.18", default-features = false }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"], optional = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
